app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */


//  app/assets/fonts/SnellRoundhandScriptV1.woff
 
// Custom Boostratp Variables must be imported before bootstrap
@import "bootstrap";

// custom Stylesheet Import links



// General Text Styles

@font-face {
  font-family:'SnellRoundhand';
  src: font-url('SnellRoundhandScriptV1.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

@mixin headings {
  h1, h2, h3,
  h4, h5, h6 {
      @content;
  }
}

@include headings {
  font-family: 'SnellRoundhand';
}

a {
  color: #000000;
}

a span {
  color: #000000;
}

.center {
  text-align: center;
}

// Header styles

.header-container {
  position: relative;
}

.header-image {
  padding: 5px;
  border-radius: 10px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  min-width: 400px;
  width: 100%;
  height: 400px;
  object-fit: cover;
  opacity: 0.35;
}

.header-top-left {
  position: absolute;
  padding-bottom: 100px;
  top: 34px;
  left: 16px;
  font-size: 6vw;
  line-height: 65px;
  min-width: 400px;
  font-family: 'SnellRoundhand', cursive;
}
.authentication-text {
  display: inline-block;
}

.authentication-position {
  position: absolute;
  top: 15px;
  right: 10px;
}

// Avatars

.avatar-tiny {
  width: 24px;
  height: 24px;
  padding: 1px;
  border-radius: 5px;
  object-fit: cover;
}

.avatar {
  width: 100px;
  height: 100px;
  padding: 1px;
  border-radius: 25px;
  object-fit: cover;
}

// Footer Styles

// Navbar Styles

// Home Page Styles

.welcome-sub-header {
  text-align: center;
}

.welcome-sub-header > h1 {
  font-size: 50px;
}

.welcome-sub-header > h4 {
  font-size: 30px;
  color: rgba(37, 37, 37, 0.416);
}

// UL to cards

.products {
  padding: 2rem;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 1rem;
  align-items: center;
  justify-content: center;
  
  & > h2 {
    grid-column: 1 / -1;
  }
  
  & > ul {
    list-style-type: none;
  }
  
  & > ul > li {
    font-family: 'SnellRoundhand';
    border: 1px solid #ccc;
    border-radius: .3rem;
  }

}

.card {
  width: 375px;
  height: 415px;
  background-color: white;
  padding: 0.5% 0% 0% 0%;
  padding-bottom: 1px;
  border-radius: 5px;
  border: 1.5px solid #CBCBCB;
  border-top: 3px solid #419234;
  text-align: center;
  float: left;
  margin-bottom: 4%;
  margin-right: 4%;
}

.card-image {
  padding: 1px;
  border-radius: 5px;
  width: 373px;
  height: 100%;
  object-fit: cover;
  // // display: block;
  // margin-left: auto;
  // margin-right: auto;
  // min-width: 400px;
  // width: 100%;
  // height: 400px;
}

.card-image-not-found {
  padding: 1px;
  width: 200px;
  display: block;
  margin-left: auto;
  margin-right: auto;

  // display: block;
  // margin-left: auto;
  // margin-right: auto;
  // min-width: 400px;
  // width: 100%;
  // height: 400px;
}

// Product Page Styles

.centered-header {
  text-align: center;
}

// User Forms

.user-form-grid-container {
  padding: 2rem;
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: auto;
  grid-template-areas:
    "left-col right-col";
  // grid-template-columns: 1fr 1fr;
  grid-gap: 1rem;
}

.form-col-2 {
  grid-area: left-col;
  border: 1px;
}

.form-col-1 {
  grid-area: right-col;
  border: 1px;
}

// Reviews Styles

.reviews-container {
  white-space: nowrap;
}

.reviews-ul {
  list-style-type: none;
}

.reviews-li {
  display: inline-block;
}

.review-card {
  width: 500px;
  height: 100ps;
  border: 1px;
}

// Will Paginate Styling

.pagination {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width:fit-content;
  background: white;
  cursor: default;
  /* self-clearing method: */ }
  .pagination a, .pagination span, .pagination em {
    padding: 0.2em 0.5em;
    display: block;
    float: left;
    margin-right: 1px; }
  .pagination .disabled {
    color: #999999;
    border: 1px solid #dddddd; }
  .pagination .current {
    font-style: normal;
    font-weight: bold;
    background: #419234;
    color: white;
    border: 1px solid #419234; }
  .pagination a {
    text-decoration: none;
    color: #288a40;
    border: 1px solid #4d8647; }
    .pagination a:hover, .pagination a:focus {
      color: #152519;
      border-color: #152519; }
  .pagination .page_info {
    background: #419234;
    color: white;
    padding: 0.4em 0.6em;
    width: 22em;
    margin-bottom: 0.3em;
    text-align: center; }
    .pagination .page_info b {
      color: #152519;
      background: #4d8647;
      padding: 0.1em 0.25em; }
  .pagination:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden; }
  * html .pagination {
    height: 1%; }
  *:first-child + html .pagination {
    overflow: hidden; 
}

